fix: Contrast Color Corrections

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
     <section id="Estudios" class="Estudios h-[50vh] items-center flex flex-col">
         <h2 class="mb-4" tabindex=0><i class="fa-solid fa-school "></i> Estudios</h2>
-        <table tabindex=0 class="table">
+        <table tabindex=0 class="EstudiosTabla">
             <thead>
                 <tr class="text-center">
-                    <th> TITULO</th>                    
+                    <th > TITULO</th>                    
                     <th >INSTITUCIÓN</th>
                     <th >INICIO</th>
                     <th >GRADUACIÓN</th>
