--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </aside>
     </section>
 
-    <section id="Experiencia" class="Experiencia mx-auto flex flex-wrap flex-col justify-center items-center  text-left h-[50vh]">
+    <section id="Experiencia" class="Experiencia mx-auto flex flex-col justify-center items-center h-[50vh]">
         <h2 tabindex=0 class="mb-4"><i class="fa-solid fa-suitcase "></i> Experiencia Profesional</h2>
         <div class="ml-6">
             <h3 class="mb-2" tabindex=0>Desarrollador móvil jr - Independiente</h3>
