--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="social-networks mt-8 flex flex-wrap">
                 <a href="https://www.linkedin.com/in/paul-rom%C3%A1n-995a411b7/"><i
                         class="fa-brands fa-linkedin fa-xl"></i> LinkedIn </a>
-                <a href="https://www.github/paulr10463"><i class="fa-brands fa-github fa-xl"></i> Github </a>
+                <a href="https://www.github.com/paulr10463"><i class="fa-brands fa-github fa-xl"></i> Github </a>
                 <a href="paul.roman@epn.edu.ec"><i class="fa-solid fa-envelope fa-xl"></i> paul.roman@epn.edu.ec </a>
                 <a href="tel:+593922172881"><i class="fa-solid fa-phone fa-xl"></i> 0983472881 </a>
             </div>
