feat: Portafolio improved

--- a/index.html
+++ b/index.html
@@ -1,145 +1,212 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currículum Personal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  </head>
 
-<body>
-
-    <header class="flex flex-wrap justify-between items-center py-3 w-[100%] lg:w-[1120px]">
-        <h1 tabindex=0 class="text-3xl">Currículum Personal </h1>  
-        <nav class="flex flex-row gap-x-12 ">
-            <a tabindex=0 href="#SobreMi">Sobre mí</a>
-            <a tabindex=0 href="#Experiencia">Experiencia</a>
-            <a tabindex=0 href="#Referencias">Referencias</a>
-        </nav>
+  <body>
+    <header
+      class="flex flex-wrap justify-between items-center py-3 w-[100%] lg:w-[1120px]"
+    >
+      <h1 tabindex="0" class="text-3xl">Currículum Personal</h1>
+      <nav class="flex flex-row gap-x-12">
+        <a tabindex="0" href="#SobreMi">Sobre mí</a>
+        <a tabindex="0" href="#Experiencia">Experiencia</a>
+        <a tabindex="0" href="#Referencias">Referencias</a>
+      </nav>
     </header>
 
-    <section id="SobreMi" class="Personal-Data flex flex-wrap items-center justify-center h-[100vh]">
-        <img class="rounded-full w-[250px] h-[250px]" tabindex=0
-            src="https://avatars.githubusercontent.com/u/98636599?s=400&u=868cf64d369c42fb7f87aba0d273b6489e2d8493&v=4"
-            alt="Foto de Paúl Román">
-        <aside class="Personal-Data-Detail max-w-[600px]">
-            <h2 class="font-medium" tabindex=0>Desarrollador Web Jr</h2>
-            <p tabindex=0 class="max-w-full text-xl"> Hola, soy <span>Paúl Román</span>. Soy estudiante de la Escuela Politécnica
-                Nacional, me gusta la programación y el desarrollo web.</p>
-            <br>
-            <p tabindex=0><span
-                    class="bg-green-100 text-green-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300">Disponible
-                    para trabajar</span></p>
-            <div class="social-networks mt-8 flex flex-wrap">
-                <a href="https://www.linkedin.com/in/paul-rom%C3%A1n-995a411b7/"><i
-                        class="fa-brands fa-linkedin fa-xl"></i> LinkedIn </a>
-                <a href="https://www.github.com/paulr10463"><i class="fa-brands fa-github fa-xl"></i> Github </a>
-                <a href="paul.roman@epn.edu.ec"><i class="fa-solid fa-envelope fa-xl"></i> paul.roman@epn.edu.ec </a>
-                <a href="tel:+593922172881"><i class="fa-solid fa-phone fa-xl"></i> 0983472881 </a>
-            </div>
-        </aside>
+    <section
+      id="SobreMi"
+      class="Personal-Data flex flex-wrap items-center justify-center h-[100vh]"
+    >
+      <img
+        class="rounded-full w-[250px] h-[250px]"
+        tabindex="0"
+        src="https://avatars.githubusercontent.com/u/98636599?s=400&u=868cf64d369c42fb7f87aba0d273b6489e2d8493&v=4"
+        alt="Foto de Paúl Román"
+      />
+      <aside class="Personal-Data-Detail max-w-[600px]">
+        <h2 class="font-medium" tabindex="0">Desarrollador Web Jr</h2>
+        <p tabindex="0" class="max-w-full text-xl">
+          Hola, soy <span>Paúl Román</span>. Soy estudiante de la Escuela
+          Politécnica Nacional, me gusta la programación y el desarrollo web.
+        </p>
+        <br />
+        <p tabindex="0">
+          <span
+            class="bg-green-800 text-green-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300"
+            >Disponible para trabajar</span
+          >
+        </p>
+        <div class="social-networks mt-8 flex flex-wrap">
+          <a href="https://www.linkedin.com/in/paul-rom%C3%A1n-995a411b7/"
+            ><i class="fa-brands fa-linkedin fa-xl"></i> LinkedIn
+          </a>
+          <a href="https://www.github.com/paulr10463"
+            ><i class="fa-brands fa-github fa-xl"></i> Github
+          </a>
+          <a href="paul.roman@epn.edu.ec"
+            ><i class="fa-solid fa-envelope fa-xl"></i> paul.roman@epn.edu.ec
+          </a>
+          <a href="tel:+593922172881"
+            ><i class="fa-solid fa-phone fa-xl"></i> 0983472881
+          </a>
+        </div>
+      </aside>
     </section>
 
-    <section id="Experiencia" class="Experiencia mx-auto flex flex-col justify-center items-center h-[50vh]">
-        <h2 tabindex=0 class="mb-4"><i class="fa-solid fa-suitcase "></i> Experiencia Profesional</h2>
+    <section
+      id="Experiencia"
+      class="Experiencia mx-auto flex flex-col justify-center items-center h-[50vh]"
+    >
+      <h2 tabindex="0" class="mb-4">
+        <i class="fa-solid fa-suitcase"></i> Experiencia Profesional
+      </h2>
+      <div class="ml-6">
+        <h3 class="mb-2" tabindex="0">
+          Desarrollador móvil jr - Independiente
+        </h3>
         <div class="ml-6">
-            <h3 class="mb-2" tabindex=0>Desarrollador móvil jr - Independiente</h3>
-            <div class="ml-6">
-                <h4 tabindex=0 class="inline bg-red-300 py-1 px-4 rounded-full text-black">Ago 2022 - Jul 2023</h4>
-                <ul tabindex=0 class="w-full text-left mt-2 list-disc pl-8">
-                    <li >Replicación y resolución de bugs en la aplicación móvil Android de American Eagle.</li>
-                    <li >Implementación de interfaces gráficas empleando Jetpack Compose.</li>
-                    <li >Uso de proxys (Charles).</li>
-                </ul>
-            </div>
-        </div> 
+          <h4
+            tabindex="0"
+            class="inline bg-red-300 py-1 px-4 rounded-full text-black"
+          >
+            Ago 2022 - Jul 2023
+          </h4>
+          <ul tabindex="0" class="w-full text-left mt-2 list-disc pl-8">
+            <li>
+              Replicación y resolución de bugs en la aplicación móvil Android de
+              American Eagle.
+            </li>
+            <li>
+              Implementación de interfaces gráficas empleando Jetpack Compose.
+            </li>
+            <li>Uso de proxys (Charles).</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section id="Estudios" class="Estudios h-[50vh] items-center flex flex-col">
-        <h2 class="mb-4" tabindex=0><i class="fa-solid fa-school "></i> Estudios</h2>
-        <table tabindex=0 class="EstudiosTabla">
-            <thead>
-                <tr class="text-center">
-                    <th > TITULO</th>                    
-                    <th >INSTITUCIÓN</th>
-                    <th >INICIO</th>
-                    <th >GRADUACIÓN</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Bachiller en Ciencias</td>
-                    <td>Unidad Educativa "Hipatia Cárdenas de Bustamante"</td>
-                    <td>2012</td>
-                    <td>2018</td>
-                </tr>
-                <tr>
-                    <td>Ingeniería en Electrónica y Automatización</td>
-                    <td>Escuela Politécnica Nacional</td>
-                    <td>2018</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Ingeniería de Software</td>
-                    <td>Escuela Politécnica Nacional</td>
-                    <td>2020</td>
-                    <td>2025</td>
-                </tr>
-            </tbody>
-        </table>
+      <h2 class="mb-4" tabindex="0">
+        <i class="fa-solid fa-school"></i> Estudios
+      </h2>
+      <table tabindex="0" class="EstudiosTabla">
+        <thead>
+          <tr class="text-center">
+            <th>TITULO</th>
+            <th>INSTITUCIÓN</th>
+            <th>INICIO</th>
+            <th>GRADUACIÓN</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Bachiller en Ciencias</td>
+            <td>Unidad Educativa "Hipatia Cárdenas de Bustamante"</td>
+            <td>2012</td>
+            <td>2018</td>
+          </tr>
+          <tr>
+            <td>Ingeniería en Electrónica y Automatización</td>
+            <td>Escuela Politécnica Nacional</td>
+            <td>2018</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Ingeniería de Software</td>
+            <td>Escuela Politécnica Nacional</td>
+            <td>2020</td>
+            <td>2025</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
-    <section class="h-[50vh] mb-10 flex flex-col  ">
-        <h2 tabindex=0 class="self-start"><i class="fa-solid fa-video mb-8"></i> Video de Presentación</h2>
-        <div class="video-container w-[600px] h-[800px] ">
-            <iframe tabindex=0 width="100%" height="100%" src="https://www.youtube.com/embed/9_u6pC2zQZA?si=011jKRTe_-KfehsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <p tabindex=0 class="mt-5">Enlace al video de presentación: <a tabindex=0 class="text-red-300" href="https://www.youtube.com/watch?v=9_u6pC2zQZA" target="_blank"
-                rel="noopener">Ver en YouTube</a></p>
+    <section class="h-[50vh] mb-10 flex flex-col">
+      <h2 tabindex="0" class="self-start">
+        <i class="fa-solid fa-video mb-8"></i> Video de Presentación
+      </h2>
+      <div class="video-container w-[600px] h-[800px]">
+        <iframe
+          tabindex="0"
+          width="100%"
+          height="100%"
+          src="https://www.youtube.com/embed/9_u6pC2zQZA?si=011jKRTe_-KfehsE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <p tabindex="0" class="mt-5">
+        Enlace al video de presentación:
+        <a
+          tabindex="0"
+          class="text-red-300"
+          href="https://www.youtube.com/watch?v=9_u6pC2zQZA"
+          target="_blank"
+          rel="noopener"
+          >Ver en YouTube</a
+        >
+      </p>
     </section>
 
-    <section id="Referencias" class="Referencias h-[50vh] mb-[100px] flex flex-col justify-center items-center">
-        <h2 tabindex=0 class="mb-8"><i class="fa-solid fa-person"></i> Referencias</h2>
-        <table tabindex=0 class="Referencias_tabla">
-          <thead >
-            <tr>
-              <th class="bg-red-300 text-black" >NOMBRES Y APELLIDOS</th>
-              <th class="bg-red-300 text-black" >TELÉFONO</th>
-              <th class="bg-red-300 text-black" >CARGO</th>
-              <th class="bg-red-300 text-black" >INSTITUCIÓN</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Richard Mauricio Quimbiulco Carrillo</td>
-              <td>0962942771</td>
-              <td>Desarrollador Web</td>
-              <td>-</td>
-            </tr>
-            <tr>
-              <td>Santiago Miguel Salazar Paspuezán</td>
-              <td>0981016217</td>
-              <td>Pasante</td>
-              <td>Hidalgo e Hidalgo</td>
-            </tr>
-            <tr>
-              <td>David Santiago Yánez Astudillos</td>
-              <td>0989853034</td>
-              <td>Estudiante</td>
-              <td>EPN</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-      
+    <section
+      id="Referencias"
+      class="Referencias h-[50vh] mb-[100px] flex flex-col justify-center items-center"
+    >
+      <h2 tabindex="0" class="mb-8">
+        <i class="fa-solid fa-person"></i> Referencias
+      </h2>
+      <table tabindex="0" class="Referencias_tabla">
+        <thead>
+          <tr>
+            <th class="bg-red-300 text-black">NOMBRES Y APELLIDOS</th>
+            <th class="bg-red-300 text-black">TELÉFONO</th>
+            <th class="bg-red-300 text-black">CARGO</th>
+            <th class="bg-red-300 text-black">INSTITUCIÓN</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Richard Mauricio Quimbiulco Carrillo</td>
+            <td>0962942771</td>
+            <td>Desarrollador Web</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Santiago Miguel Salazar Paspuezán</td>
+            <td>0981016217</td>
+            <td>Pasante</td>
+            <td>Hidalgo e Hidalgo</td>
+          </tr>
+          <tr>
+            <td>David Santiago Yánez Astudillos</td>
+            <td>0989853034</td>
+            <td>Estudiante</td>
+            <td>EPN</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
-    <script src="https://kit.fontawesome.com/c88fa6622d.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/brands.min.css"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/fontawesome.min.css"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/c88fa6622d.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/brands.min.css"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/fontawesome.min.css"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
