fix: Styles with dark - ligh schemas

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br />
         <p tabindex="0">
           <span
-            class="bg-green-800 text-green-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300"
+            class="text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300"
             >Disponible para trabajar</span
           >
         </p>
